flapivor/tests/m1/hopix/parser/bad/45-value-definition-2.hopix
val inconsistency : forall A. a = 0